Работа над попапами и рсервным блоком каталога

--- a/catalog.html
+++ b/catalog.html
@@ -65,10 +65,10 @@
       <div class="wrap">
         
         <ul class="catalog-main-nav">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="list.html">Каталог</a> </li>
-          <li><a href="instrument.html">Инструменты</a></li>
-          <li><a href="perforator.html">Перфораторы</a></li>
+          <li><a class="catalog-main-nav-item to-home" href="index.html">Главная</a></li>
+          <li><a class="catalog-main-nav-item to-catalog" href="list.html">Каталог</a> </li>
+          <li><a class="catalog-main-nav-item to-instruments" href="instrument.html">Инструмент</a></li>
+          <li><a class="catalog-main-nav-item to-perforator" href="perforator.html">Перфораторы</a></li>
         </ul>
 
         <section>
