--- a/catalog.html
+++ b/catalog.html
@@ -45,16 +45,18 @@
 
           <div class="profile-wrapper">
             <a class="profile-name" href="#">
-                <svg class="icon-user" xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
-                  <path d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/>
-                </svg>
-                Равшан Джамшутович
+              <svg class="icon-user" xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+                <path
+                  d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z" />
+              </svg>
+              Равшан Джамшутович
             </a>
             <a class="login-exit" href="#">
               Выйти
               <svg class="icon-logout" xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
-                <path d="M21 8.5L12.125 0v6h-6v5h6v6z"/>
-                <path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
+                <path d="M21 8.5L12.125 0v6h-6v5h6v6z" />
+                <path
+                  d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z" />
               </svg>
             </a>
           </div>
@@ -97,8 +99,8 @@
       <div class="perforator-block">
         <!--Доделать второй позунок,и отображение выбранных значений-->
         <section class="catalog-colomn-1">
-            <h2>Фильтр:</h2>
-            <form action="https://echo.htmlacademy.ru" method="get">
+          <h2>Фильтр:</h2>
+          <form action="https://echo.htmlacademy.ru" method="get">
             <label for="price">Цена:</label>
             <div>
               0
@@ -152,36 +154,34 @@
             <button type="submit">показать</button>
           </form>
         </section>
-    <section class="catalog-colomn-2">
-      <section class="filter-line">
-          <h2>Сортировка:</h2>
-          <ul class="filter-list">
-            <li><a href="#"> По цене </a></li>
-            <li><a href="#"> По типу </a></li>
-            <li><a href="#"> По функционалу </a></li>
-          </ul>
-          <div class="min-max-block">
-            <a class="min indicator" href="#"> по убыванию </a>
-            <a class="max indicator" href="#"> по возрастанию </a>
-          </div>
-        </section>
-          
+        <section class="catalog-colomn-2">
+          <section class="filter-line">
+            <h2>Сортировка:</h2>
+            <ul class="filter-list">
+              <li><a class="catalog-active" href="#"> По цене </a></li>
+              <li><a href="#"> По типу </a></li>
+              <li><a href="#"> По функционалу </a></li>
+              
+            </ul>
+            <div class="min-max-block">
+              <a class="min indicator" href="#">
+                по убыванию
+                <svg  class="catalog-active" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                  <path d="M5.5 0L0 10h11z" />
+                </svg>
+              </a>
+
+              <a class="max indicator" href="#">
+                по возрастанию
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                  <path d="M5.5 10L0 0h11" />
+                </svg>
+              </a>
+            </div>
+          </section>
+
           <ul class="goods-list">
-            <li class="goods-item" tabindex="0">
-              <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
-              </div>
-              <div class="picture">
-                <img src="img/perforator_9000.png" width="218" height="170" alt="BFG-9000">
-              </div>
-              <h3 class="name">
-                <a href="">Перфоратор BOSCH BFG 9000</a>
-              </h3>
-              <del class="discount">32500 p.</del>
-              <div class="price">25500 p.</div>
-            </li>
-  
+
             <li class="goods-item" tabindex="0">
               <div class="actions">
                 <a href='#' class="buy">купить</a>
@@ -196,7 +196,7 @@
               <del class="discount">22500 p.</del>
               <div class="price">15500 p.</div>
             </li>
-  
+
             <li class="goods-item" tabindex="0">
               <div class="actions">
                 <a href='#' class="buy">купить</a>
@@ -211,7 +211,23 @@
               <del class="discount">30500 p.</del>
               <div class="price">25500 p.</div>
             </li>
-  
+
+            <li class="goods-item" tabindex="0">
+              <div class="flag flag-new">новое</div>
+              <div class="actions">
+                <a href='#' class="buy">купить</a>
+                <a href='#' class="bookmark">В закладки</a>
+              </div>
+              <div class="picture">
+                <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
+              </div>
+              <h3 class="name">
+                <a href="">Перфоратор BOSCH BFG 2000</a>
+              </h3>
+              <div class="discount"><del></del></div>
+              <div class="price">12500 p.</div>
+            </li>
+
             <li class="goods-item" tabindex="0">
               <div class="flag flag-new">новое</div>
               <div class="actions">
@@ -242,7 +258,7 @@
               <del class="discount">30500 p.</del>
               <div class="price">25500 p.</div>
             </li>
-  
+
             <li class="goods-item" tabindex="0">
               <div class="flag flag-new">новое</div>
               <div class="actions">
@@ -265,29 +281,13 @@
                 <a href='#' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
-                <img src="img/perforator_6000.png" width="218" height="170" alt="BFG-6000">
+                <img src="img/perforator_3000.png" width="218" height="170" alt="BFG-3000">
               </div>
               <h3 class="name">
-                <a href=""> Перфоратор BOSCH BFG 6000</a>
+                <a href="">Перфоратор BOSCH BFG 3000</a>
               </h3>
-              <del class="discount">30500 p.</del>
-              <div class="price">25500 p.</div>
-            </li>
-  
-            <li class="goods-item" tabindex="0">
-              <div class="flag flag-new">новое</div>
-              <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
-              </div>
-              <div class="picture">
-                <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
-              </div>
-              <h3 class="name">
-                <a href="">Перфоратор BOSCH BFG 2000</a>
-              </h3>
-              <div class="discount"><del></del></div>
-              <div class="price">12500 p.</div>
+              <del class="discount">22500 p.</del>
+              <div class="price">15500 p.</div>
             </li>
 
             <li class="goods-item" tabindex="0">
@@ -304,76 +304,123 @@
               <del class="discount">30500 p.</del>
               <div class="price">25500 p.</div>
             </li>
-  
+
+            <li class="goods-item" tabindex="0">
+              <div class="flag flag-new">новое</div>
+              <div class="actions">
+                <a href='#' class="buy">купить</a>
+                <a href='#' class="bookmark">В закладки</a>
+              </div>
+              <div class="picture">
+                <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
+              </div>
+              <h3 class="name">
+                <a href="">Перфоратор BOSCH BFG 2000</a>
+              </h3>
+              <div class="discount"><del></del></div>
+              <div class="price">12500 p.</div>
+            </li>
+
           </ul>
-        <div>
-        <h4>Страницы</h4>
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">Следующая </a>
+
+          <div class="catalog-pagenation">
+            <div class="catalog-pagenation-wrapper">
+              <!--Обертка для красивого переполнения-->
+              <h3 class="visually-hidden">Страницы</h3>
+              <a class="catalog-active" href="#">1</a>
+              <a href="#">2</a>
+              <a href="#">3</a>
+              <a class="next-page" href="#">Следующая </a>
+            </div>
+          </div>
+
+        </section>
       </div>
-    </section>
-  </div>
-</div>  
-      <article>
-      <h2>Пара слов о перфораторах</h2>
-      <p>Перфоратор-универсальный инструмент.Предназначен для сверления и долбления отверстий в кирпиче,бетоне и камне.
-        Существуют электромеханические и пневматические перфораторы.Современные модели могут выполнять функции
-        дрели,шуруповерта и отбойного молотка
-        В ассортементном рядуесть выбор "трехрежимников":в одном устройстве будут совмещены отбойный молоток и ударная
-        дрель.
-      </p>
+    </div>
+    <article class="article">
+      <div class="wrap">
+        <h2>Пара слов о перфораторах</h2>
+        <p>Перфоратор-универсальный инструмент.Предназначен для сверления и долбления отверстий в кирпиче,бетоне и камне.
+          Существуют электромеханические и пневматические перфораторы.Современные модели могут выполнять функции
+          дрели,шуруповерта и отбойного молотка
+          В ассортементном рядуесть выбор "трехрежимников":в одном устройстве будут совмещены отбойный молоток и ударная
+          дрель.
+        </p>
+      </div>
     </article>
   </main>
 
   <footer>
-    <section>
-      <img src="img/technomart.png" alt="Техномаркет">
-      <br>
-      <p>г.Санкт-Петербург, ул.Б.Конюшенная д.19/8</p>
-      <p>+7(812)555-05-55</p>
+    <section class="footer-top">
+      <div class="wrap">
+        <div class="footer-column-1">
+          <a class="footer-logo" href="#"><img src="img/technomart-footer.png" width="220" height="68"
+              alt="Техномарт"></a>
+          <div class="footer-location">
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p>+7 (812) 555-05-55</p>
+          </div>
+        </div>
 
+        <div class="footer-column-2">
+          <ul class="footer-list-1">
+            <li><a href="index.html">Компания</a></li>
+            <li><a href="news.html">Новости</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="delivery.html">Доставка</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+          </ul>
 
-      <ul>
-        <li><a href="about.html">Компания</a></li>
-        <li><a href="news.html">Новости</a></li>
-        <li><a href="list.html">Каталог</a></li>
-        <li><a href="delivery.html">Доставка</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-      <ul>
-        <li><a href="materials.html">Материалы</a></li>
-        <li><a href="tech.html">Техника</a></li>
-        <li><a href="instrument.html">Инструмент</a></li>
-        <li><a href="special-offer.html">Спецпредложения</a></li>
-      </ul>
+          <ul class="footer-list-2">
+            <li><a href="materials.html">Материалы</a></li>
+            <li><a href="tech.html">Техника</a></li>
+            <li><a href="instrument.html">Инструмент</a></li>
+            <li><a href="special-offer.html">Спецпредложения</a></li>
+          </ul>
+        </div>
+      </div>
     </section>
 
-    <section>
-      <p>(C)2010-2019 Компания "Техномарт" <br>
-        Все права защищены</p>
+    <section class="footer-bot">
+      <div class="wrap">
+        <div class="bot-item-1">
+          <p>
+            © 2010–2019 Компания «Техномарт»&nbsp;
+            Все права защищены
+          </p>
+        </div>
 
-      <ul>
-        <li><a href="">В Контакте</a></li>
-        <li><a href="">Фэйсбук</a></li>
-        <li><a href="">Инстаграм</a></li>
-      </ul>
+        <ul class="bot-item-2">
+          <li><a class="VK-icon soc-media" href="#">Vkontakte</a></li>
+          <li><a class="FB-icon soc-media" href="#">Facebook</a></li>
+          <li><a class="IG-icon soc-media" href="#">Instagram</a></li>
+        </ul>
 
-      <p>Обратная связь</p>
-      <p><a href="https://htmlacademy.ru">mail@htmlacademy.ru</a></p>
+        <div class="bot-item-3">
+          <div>
+            <p>Обратная связь:</p>
+            <p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+          </div>
 
-      <p>Разработано:</p>
-      <p><a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a></p>
+          <div>
+            <p>Разработано -</p>
+            <p><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+          </div>
 
+        </div>
+      </div>
     </section>
   </footer>
 
-  <div class="visually-hidden">
-    <button type="button">Закрыть</button>
-    <p>Товар добавлен в корзину!</p>
-    <a href="#">Оформить заказ</a>
-    <button type="button">Продожить покупки</button>
+  <div class="catalog-buy-popup">
+    <div class="catalog-popup-row-1">
+      <p>Товар добавлен в корзину!</p>
+    </div>
+    <div class="catalog-popup-row-2">
+      <a class="button" href="#">Оформить заказ</a>
+      <button class="button" type="button">Продожить покупки</button>
+    </div>
+    <button class="catalog-buy-close"  type="button">Закрыть</button>
   </div>
 
 
