Исправления совместимости основной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -130,6 +130,7 @@
                   </label>
                 </li>
 
+  
                 <li>
                   <label>
                     <input class="producers-checkbox visually-hidden" type="checkbox" name="interscol">
@@ -202,7 +203,7 @@
 
                 <li>
                   <label> 
-                    <input class="producers-checkbox visually-hidden" type="radio" name="acc" checked>
+                    <input class="producers-checkbox visually-hidden" type="radio" name="energy" value="acc" checked>
 
                     <svg class="checkbox checkbox-off" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25">
                       <path  d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/>
@@ -218,7 +219,7 @@
 
                 <li>
                   <label>
-                    <input class="producers-checkbox visually-hidden" type="radio" name="net">
+                    <input class="producers-checkbox visually-hidden" type="radio" name="energy" value="net">
 
                     <svg class="checkbox checkbox-off" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25">
                       <path  d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/>
