--- a/index.html
+++ b/index.html
@@ -251,14 +251,14 @@
 
         <div class="services-wrapper">
           <ul class="services-list">
-            <li>Доставка</li>
-            <li>Гарантия</li>
-            <li>Кредит</li>
+            <li><button type="button">Доставка</button></li>
+            <li><button type="button">Гарантия</button></li>
+            <li><button type="button">Кредит</button></li>
           </ul>
 
           <div class="services-block srv-delivery">
             <h3>Доставка</h3>
-            <p>Мы с удовольствием доставим ваш товар прямо<br>
+            <p>Мы с удовольствием доставим ваш товар прямо
               к вашему подъезду совершенно бесплатно!
               Ведь мы неплохо заработаем,<br>
               поднимая его на ваш этаж!</p>
@@ -388,17 +388,16 @@
 
   <div class="map-popup">
     <img class="big-map" src="img/map.png" height="476" width="940" id="big-map"
-      alt="Наш адресЖг.Санкт-Петербург, ул.Б.Конюшенная д.19/8">
+      alt="Наш адрес:г.Санкт-Петербург, ул.Б.Конюшенная д.19/8">
     <button class="map-popup-close" type="button">Закрыть</button>
   </div>
 
-
-  <form class="letter-popup " action="https://echo.htmlacademy.ru" method="POST">
+  <form class="letter-popup" action="https://echo.htmlacademy.ru" method="POST">
     <h2 class="visually-hidden">Обратная связь</h2>
     <div class="inputs-wrapper">
       <div class="letter-popup-name">
         <label>
-          Ваше имя
+          Ваше имя:
           <input type="text" name="name" placeholder="Имя Фамилия" required>
         </label>
       </div>
@@ -423,6 +422,17 @@
     <button class="letter-popup-close" type="button"> Закрыть </button>
     
   </form>
+  <div class="catalog-buy-popup">
+    <div class="catalog-popup-row-1">
+      <p>Товар добавлен в корзину!</p>
+    </div>
+    <div class="catalog-popup-row-2">
+      <a class="button" href="#">Оформить заказ</a>
+      <button class="button" type="button">Продожить покупки</button>
+    </div>
+    <button class="catalog-buy-close"  type="button">Закрыть</button>
+  </div>
+
 </body>
 
 </html>
