--- a/catalog.html
+++ b/catalog.html
@@ -13,9 +13,12 @@
       <div class="header-top-wrapper wrap">
         <div class="h-left">
           <a href="#" class="logo"><img src="img/logo-technomart.svg" width="110" height="20" alt="Логотип"></a>
-          <form action="https://echo.htmlacademy.ru" method="get">
-            <label for="search"> </label>
-            <input class="search" type="search" name="search" id="search" placeholder="Поиск:">
+          <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+            <input class="search" type="search" name="search" id="search" placeholder="Поиск:" aria-label="search">
+            <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+              <path
+                d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+            </svg>
           </form>
         </div>
 
@@ -277,8 +280,8 @@
           <ul class="goods-list">
             <li class="goods-item" tabindex="0">
               <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
+                <a href='buy-page.html' class="buy">купить</a>
+                <a href='bookmark-page.html' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
                 <img src="img/perforator_3000.png" width="218" height="170" alt="BFG-3000">
@@ -292,8 +295,8 @@
 
             <li class="goods-item" tabindex="0">
               <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
+                <a href='buy-page.html' class="buy">купить</a>
+                <a href='bookmark-page.html' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
                 <img src="img/perforator_6000.png" width="218" height="170" alt="BFG-6000">
@@ -308,8 +311,8 @@
             <li class="goods-item" tabindex="0">
               <div class="flag flag-new">новое</div>
               <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
+                <a href='buy-page.html' class="buy">купить</a>
+                <a href='bookmark-page.html' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
                 <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
@@ -323,8 +326,8 @@
 
             <li class="goods-item" tabindex="0">
                 <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
+                <a href='buy-page.html' class="buy">купить</a>
+                <a href='bookmark-page.html' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
                 <img src="img/perforator_3000.png" width="218" height="170" alt="BFG-3000">
@@ -339,8 +342,8 @@
             <li class="goods-item" tabindex="0">
               <div class="flag flag-new">новое</div>
               <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
+                <a href='buy-page.html' class="buy">купить</a>
+                <a href='bookmark-page.html' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
                 <img src="img/perforator_6000.png" width="218" height="170" alt="BFG-6000">
@@ -354,8 +357,8 @@
 
             <li class="goods-item" tabindex="0">
               <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
+                <a href='buy-page.html' class="buy">купить</a>
+                <a href='bookmark-page.html' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
                 <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
@@ -370,8 +373,8 @@
             <li class="goods-item" tabindex="0">
                 <div class="flag flag-new">новое</div>
                 <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
+                <a href='buy-page.html' class="buy">купить</a>
+                <a href='bookmark-page.html' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
                 <img src="img/perforator_3000.png" width="218" height="170" alt="BFG-3000">
@@ -385,8 +388,8 @@
 
             <li class="goods-item" tabindex="0">
               <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
+                <a href='buy-page.html' class="buy">купить</a>
+                <a href='bookmark-page.html' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
                 <img src="img/perforator_6000.png" width="218" height="170" alt="BFG-6000">
@@ -400,8 +403,8 @@
 
             <li class="goods-item" tabindex="0">
               <div class="actions">
-                <a href='#' class="buy">купить</a>
-                <a href='#' class="bookmark">В закладки</a>
+                <a href='buy-page.html' class="buy">купить</a>
+                <a href='bookmark-page.html' class="bookmark">В закладки</a>
               </div>
               <div class="picture">
                 <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
