--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header-top">
       <div class="header-top-wrapper wrap">
         <div class="h-left">
-          <a href="#" class="logo"><img src="img/logo-technomart.svg" width="110px" height="20px" alt="Логотип"></a>
+          <a href="#" class="logo"><img src="img/logo-technomart.svg" width="110" height="20" alt="Логотип"></a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
             <input class="search" type="search" name="search" id="search" placeholder="Поиск:" aria-label="search">
             <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
@@ -83,7 +83,7 @@
             <a class="transparent-button" href="#">на любой вкус</a>
           </div>
 
-          <div class="instruments features-item" order=1>
+          <div class="instruments features-item">
             <p>Инструмент</p>
             <a class="transparent-button" href="#">на все случаи</a>
           </div>
@@ -119,7 +119,6 @@
               <li class="slide-item">
                 <h3>Перфораторы</h3>
                 <p>Настоящие мужские игрушки</p>
-                </a>
               </li>
             </ul>
             <a class="slide-button button" href="">
@@ -158,8 +157,8 @@
         <ul class="goods-list">
           <li class="goods-item" tabindex="0">
             <div class="actions">
-              <a href='#' class="buy">купить</a>
-              <a href='#' class="bookmark">В закладки</a>
+              <a href='buy-page.html' class="buy">купить</a>
+              <a href='bookmark-page.html' class="bookmark">В закладки</a>
             </div>
             <div class="picture">
               <img src="img/perforator_9000.png" width="218" height="170" alt="BFG-9000">
@@ -173,8 +172,8 @@
 
           <li class="goods-item" tabindex="0">
             <div class="actions">
-              <a href='#' class="buy">купить</a>
-              <a href='#' class="bookmark">В закладки</a>
+              <a href='buy-page.html' class="buy">купить</a>
+              <a href='bookmark-page.html' class="bookmark">В закладки</a>
             </div>
             <div class="picture">
               <img src="img/perforator_3000.png" width="218" height="170" alt="BFG-3000">
@@ -188,8 +187,8 @@
 
           <li class="goods-item" tabindex="0">
             <div class="actions">
-              <a href='#' class="buy">купить</a>
-              <a href='#' class="bookmark">В закладки</a>
+              <a href='buy-page.html' class="buy">купить</a>
+              <a href='bookmark-page.html' class="bookmark">В закладки</a>
             </div>
             <div class="picture">
               <img src="img/perforator_6000.png" width="218" height="170" alt="BFG-6000">
@@ -204,8 +203,8 @@
           <li class="goods-item" tabindex="0">
             <div class="flag flag-new">новое</div>
             <div class="actions">
-              <a href='#' class="buy">купить</a>
-              <a href='#' class="bookmark">В закладки</a>
+              <a href='buy-page.html' class="buy">купить</a>
+              <a href='bookmark-page.html' class="bookmark">В закладки</a>
             </div>
             <div class="picture">
               <img src="img/perforator_2000.png" width="218" height="170" alt="BFG-2000">
@@ -251,7 +250,7 @@
 
         <div class="services-wrapper">
           <ul class="services-list">
-            <li><button type="button">Доставка</button></li>
+            <li><button class="srv-active" type="button">Доставка</button></li>
             <li><button type="button">Гарантия</button></li>
             <li><button type="button">Кредит</button></li>
           </ul>
@@ -282,6 +281,7 @@
               Кредитные консультанты придут вам на помощь.
             </p>
             <a class="button" href="#">Отправить заявку</a>
+          </div>
           </div>
         </div>
     </section>
@@ -317,8 +317,8 @@
             Вы можете забрать товар сами
             заехав в наш офис:
           </p>
-          <a class="map" href="#"><img src="img/map.png" width="300" height="158" alt="Карта"></a>
-          <a class="button" href="#">Заблудились? Напишите нам!</a>
+          <a class="map" href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.323055%2C59.938631&mode=search&sll=37.622504%2C55.753215&sspn=1.444702%2C0.497219&text=г.%20Санкт-Петербург%2C%20ул.%20Б.%20Конюшенная%2C%20д.%2019%2F8&z=16"><img src="img/map.png" width="300" height="158" alt="Карта"></a>
+          <a class="button" href="write-back.html">Заблудились? Напишите нам!</a>
         </section>
       </section>
     </div>
