Подключение нормалайз и еще правки

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/Style.css" rel="stylesheet">
 </head>
 
@@ -51,7 +52,7 @@
               <path d="M14.875 8.5L6 0v6H0v5h6v6z" />
               <path
                 d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z" />
-              </svg>
+            </svg>
           </li>
 
           <li><a class="register" href="#">Регистрация</a></li>
@@ -282,8 +283,8 @@
             </p>
             <a class="button" href="#">Отправить заявку</a>
           </div>
-          </div>
         </div>
+      </div>
     </section>
     <!--<h2 class="visually-hidden">Информация о компании </h2>-->
     <div class="wrap">
@@ -317,7 +318,9 @@
             Вы можете забрать товар сами
             заехав в наш офис:
           </p>
-          <a class="map" href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.323055%2C59.938631&mode=search&sll=37.622504%2C55.753215&sspn=1.444702%2C0.497219&text=г.%20Санкт-Петербург%2C%20ул.%20Б.%20Конюшенная%2C%20д.%2019%2F8&z=16"><img src="img/map.png" width="300" height="158" alt="Карта"></a>
+          <a class="map"
+            href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.323055%2C59.938631&mode=search&sll=37.622504%2C55.753215&sspn=1.444702%2C0.497219&text=г.%20Санкт-Петербург%2C%20ул.%20Б.%20Конюшенная%2C%20д.%2019%2F8&z=16"><img
+              src="img/map.png" width="300" height="158" alt="Карта"></a>
           <a class="button" href="write-back.html">Заблудились? Напишите нам!</a>
         </section>
       </section>
@@ -403,13 +406,13 @@
       </div>
       <div class="letter-popup-mail">
         <label>
-           Ваш e-mail: 
-          <input  type="text" name="email" placeholder="email@example.com" required>
+          Ваш e-mail:
+          <input type="text" name="email" placeholder="email@example.com" required>
         </label>
       </div>
       <div class="letter-popup-text">
-        <label >
-           Текст письма: 
+        <label>
+          Текст письма:
           <textarea name="letter" placeholder="В свободной форме" required></textarea>
         </label>
       </div>
@@ -420,7 +423,7 @@
     </div>
 
     <button class="letter-popup-close" type="button"> Закрыть </button>
-    
+
   </form>
   <div class="catalog-buy-popup">
     <div class="catalog-popup-row-1">
@@ -430,7 +433,7 @@
       <a class="button" href="#">Оформить заказ</a>
       <button class="button" type="button">Продожить покупки</button>
     </div>
-    <button class="catalog-buy-close"  type="button">Закрыть</button>
+    <button class="catalog-buy-close" type="button">Закрыть</button>
   </div>
 
 </body>
